Hecho Delete, creado deleteProf.ejs

--- a/views/professionals/professionalDetail.ejs
+++ b/views/professionals/professionalDetail.ejs
@@ -149,7 +149,7 @@
           </button>
         </div>
         <button type="submit" style="width: 25vw;">
-          Eliminar Perfil
+          <a href="/rubros/<%= profObject[0].jobTitle %>/<%= profObject[0].cuit %>/deleteProf">Eliminar Perfil</a>
         </button>
       </div>
 
