Hecho Listado de rubros, arreglados todos los links

--- a/views/partials/nav-bar.ejs
+++ b/views/partials/nav-bar.ejs
@@ -1,8 +1,8 @@
 <nav class="nav-login">
     <section class="categories">
-        <div class="rubros">
+        <div class="login">
             <a href="rubros">
-                <p>RUBROS <i class="fas fa-chevron-down"></i></p>
+                <p>RUBROS </p>
             </a>
         </div>
         <div class="prof-zona">
