--- a/views/professionals/editProf.ejs
+++ b/views/professionals/editProf.ejs
@@ -105,48 +105,48 @@
 
                         <div class="dispo-dias">
                             <p>Dias de Prestacion de Servicio:</p>
-                            <p>Lunes<label>(9-12am)</label><input type="checkbox" name="jobDay" value="lunes-tm"
+                            <p>Lunes<label>(9-12am)</label><input type="checkbox" name="jobDay" value="Lunes-TM"
                                     selected>
                                 </option>
-                                <label>(1pm-5pm)</label><input type="checkbox" name="jobDay" value="lunes-tt" selected>
+                                <label>(1pm-5pm)</label><input type="checkbox" name="jobDay" value="Lunes-TT" selected>
                                 </option>
                             </p>
-                            <p>Martes<label>(9-12am)</label><input type="checkbox" name="jobDay" value="martes-tm"
+                            <p>Martes<label>(9-12am)</label><input type="checkbox" name="jobDay" value="Martes-TM"
                                     selected>
                                 </option>
-                                <label>(1pm-5pm)</label><input type="checkbox" name="jobDay" value="martes-tt" selected>
+                                <label>(1pm-5pm)</label><input type="checkbox" name="jobDay" value="Martes-TT" selected>
                                 </option>
                             </p>
-                            <p>Miercoles<label>(9-12am)</label><input type="checkbox" name="jobDay" value="miercoles-tm"
+                            <p>Miercoles<label>(9-12am)</label><input type="checkbox" name="jobDay" value="Miercoles-TM"
                                     selected>
                                 </option>
-                                <label>(1pm-5pm)</label><input type="checkbox" name="jobDay" value="miercoles-tt"
-                                    selected>
-                                </option>
-                            </p>
-                            <p>Jueves<label>(9-12am)</label><input type="checkbox" name="jobDay" value="jueves-tm"
-                                    selected>
-                                </option>
-                                <label>(1pm-5pm)</label><input type="checkbox" name="jobDay" value="jueves-tt" selected>
-                                </option>
-                            </p>
-                            <p>Viernes<label>(9-12am)</label><input type="checkbox" name="jobDay" value="viernes-tm"
-                                    selected>
-                                </option>
-                                <label>(1pm-5pm)</label><input type="checkbox" name="jobDay" value="viernes-tt"
+                                <label>(1pm-5pm)</label><input type="checkbox" name="jobDay" value="Miercoles-TT"
                                     selected>
                                 </option>
                             </p>
-                            <p>Sabado<label>(9-12am)</label><input type="checkbox" name="jobDay" value="sabado-tm"
+                            <p>Jueves<label>(9-12am)</label><input type="checkbox" name="jobDay" value="Jueves-TM"
                                     selected>
                                 </option>
-                                <label>(1pm-5pm)</label><input type="checkbox" name="jobDay" value="sabado-tt" selected>
+                                <label>(1pm-5pm)</label><input type="checkbox" name="jobDay" value="Jueves-TT" selected>
                                 </option>
                             </p>
-                            <p>Domingo<label>(9-12am)</label><input type="checkbox" name="jobDay" value="domingo-tm"
+                            <p>Viernes<label>(9-12am)</label><input type="checkbox" name="jobDay" value="Viernes-TM"
                                     selected>
                                 </option>
-                                <label>(1pm-5pm)</label><input type="checkbox" name="jobDay" value="domingo-tt"
+                                <label>(1pm-5pm)</label><input type="checkbox" name="jobDay" value="Viernes-TT"
+                                    selected>
+                                </option>
+                            </p>
+                            <p>Sabado<label>(9-12am)</label><input type="checkbox" name="jobDay" value="Sabado-TM"
+                                    selected>
+                                </option>
+                                <label>(1pm-5pm)</label><input type="checkbox" name="jobDay" value="Sabado-TT" selected>
+                                </option>
+                            </p>
+                            <p>Domingo<label>(9-12am)</label><input type="checkbox" name="jobDay" value="Domingo-TM"
+                                    selected>
+                                </option>
+                                <label>(1pm-5pm)</label><input type="checkbox" name="jobDay" value="Domingo-TT"
                                     selected>
                                 </option>
                             </p>
